--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "element-plus": "^2.3.5",
     "vue": "^3.2.47",
     "vue-router": "^4.2.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^20.2.3",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.41.0",
