--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 8080",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.3.5",
+    "express": "^4.18.2",
+    "simplewebrtc": "^3.0.2",
+    "socket.io": "^4.6.1",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
